Added alternative activity suggestions.

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -12,6 +12,8 @@
 
 <div class="weather">
 </div>
+<div class="alternate">
+</div>
 {%endblock%}
 
 {%block after_body%}<script src="/static/js/weather.js"></script>
