--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <nav>
-      <a href="#">Log In</a>
+      <a href="#">Log In</a> <a href="/new-account">Create an Account</a>
     </nav>
     {% for msg in get_flashed_messages() %}
     <p class="flash-msg">
