--- a/templates/login.html
+++ b/templates/login.html
@@ -2,4 +2,12 @@
 {% block title %}Log In to Be Your Own Zookeeper{% endblock %}
 
 {% block body %}
+<h1>Please Log In!</h1>
+<form action="/login-user" method="POST" class="user-login">
+    <label for="email">Please enter your email address:</label>
+    <input type="email" name="email"> <br>
+    <label for="password">Please enter your password:</label>
+    <input type="password" name="password">
+    <input type="submit">
+</form>
 {% endblock %}
