Fixed minor accessibility bugs

--- a/templates/create_account.html
+++ b/templates/create_account.html
@@ -5,11 +5,11 @@
 <h1>Create an Account!</h1>
 <form action="/create-account" method="POST" class="new-account">
     <label for="name">What name would you like us to call you?</label>
-    <input type="text" name="name"> <br>
+    <input type="text" name="name" id="name"> <br>
     <label for="email">Please enter an email address:</label>
-    <input type="email" name="email"> <br>
+    <input type="email" name="email" id="email"> <br>
     <label for="password">Please select a password:</label>
-    <input type="password" name="password">
+    <input type="password" name="password" id="password">
     <input type="submit">
 </form>
 
