--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,7 +5,7 @@
 <h1>Be Your Own Zookeeper</h1>
 <h2>Is the weather good for walking?</h2>
 <form action="/zip-form" class="get-weather">
-    <label for="zipcode">Please enter your zipcode:</label>
+    <label for="zipcode-field">Please enter your zipcode:</label>
     <input type="text" name="zipcode" id="zipcode-field"></input>
     <input type="submit">
 </form>
