Added zipcode to required fields for creating a user, made form fields required, and changed session to hold email instead of user_id

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <nav>
-      {% if "user_id" in session %}
+      {% if "user_email" in session %}
       <a href="/logout">Log Out</a>
       {% else %}
       <a href="/login">Log In</a> 
