--- a/templates/login.html
+++ b/templates/login.html
@@ -5,9 +5,9 @@
 <h1>Please Log In!</h1>
 <form action="/login-user" method="POST" class="user-login">
     <label for="email">Please enter your email address:</label>
-    <input type="email" name="email" id="email"> <br>
+    <input type="email" name="email" id="email" required> <br>
     <label for="password">Please enter your password:</label>
-    <input type="password" name="password" id="password">
+    <input type="password" name="password" id="password" required>
     <input type="submit">
 </form>
 {% endblock %}
