Made weather report show on page load for logged in users

--- a/templates/user_homepage.html
+++ b/templates/user_homepage.html
@@ -15,5 +15,5 @@
 </div>
 {%endblock%}
 
-{%block after_body%} <script type="module" src="/static/js/homepage.js"></script>
+{%block after_body%} <script type="module" src="/static/js/user_homepage.js"></script>
 {% endblock %}
