Set up weather_preference settings page and prepared to make it set preferences

--- a/templates/user_homepage.html
+++ b/templates/user_homepage.html
@@ -9,6 +9,7 @@
     <input type="text" name="zipcode" id="zipcode-field" value="{{zipcode}}"></input>
     <input type="submit">
 </form>
+<a href="/weather-preferences">Set Weather Preferences</a>
 <div class="weather">
 </div>
 <div class="alternate">
