--- a/templates/base.html
+++ b/templates/base.html
@@ -12,10 +12,11 @@
   <body>
     <nav>
       {% if "user_email" in session %}
+      <a href="/user-homepage">Home</a>
       <a href="/logout">Log Out</a>
       {% else %}
-      <a href="/login">Log In</a> 
       <a href="/new-account">Create an Account</a>
+      <a href="/login">Log In</a> 
       {% endif %}
     </nav>
     {% for msg in get_flashed_messages() %}
