--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -14,6 +14,8 @@
 </div>
 <div class="alternate">
 </div>
+
+<a href="/new-account">Want to customize your walking weather and more? Make an account!</a>
 {%endblock%}
 
 {%block after_body%}<script type="module" src="/static/js/homepage.js"></script>
