Updated base.html navbar to have the pages that will be made soon

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,9 @@
     <nav>
       {% if "user_email" in session %}
       <a href="/user-homepage">Home</a>
+      <a href="#">Schedule</a>
+      <a href="#">Checklist</a>
+      <a href="#">Account Preferences</a>
       <a href="/logout">Log Out</a>
       {% else %}
       <a href="/new-account">Create an Account</a>
