--- a/templates/checklist.html
+++ b/templates/checklist.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
-{% block title %}{{Name's}} Checklist For When Everything Feels Bad{% endblock %}
+{% block title %}{{name}}'s Checklist For When Everything Feels Bad{% endblock %}
 
 {% block body %}
-<div class = "question"></div>
-<div class = "advice"></div>
+<div class = "question">{{question}}</div>
+<div class = "advice">{{advice}}</div>
 {% endblock %}
