--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
       {% if "user_email" in session %}
       <a href="/user-homepage">Home</a>
       <a href="#">Schedule</a>
-      <a href="#">Checklist</a>
+      <a href="/checklist-item/1">Checklist</a>
       <a href="#">Account Preferences</a>
       <a href="/logout">Log Out</a>
       {% else %}
