--- a/templates/checklist.html
+++ b/templates/checklist.html
@@ -2,6 +2,17 @@
 {% block title %}{{name}}'s Checklist For When Everything Feels Bad{% endblock %}
 
 {% block body %}
-<div class = "question">{{question}}</div>
-<div class = "advice">{{advice}}</div>
+<div class = "question">
+    <h1>{{question}}</h1>
+    <a href="/checklist-item/{{order+1}}">Yes</a>
+    <a href="/show-advice" class="show-advice">No</a>
+</div>
+<div class = "advice">
+    <h2>{{advice}}</h2>
+    <a href="/user-homepage">Done with Checklist</a>
+    <a href="/checklist-item/{{order+1}}">Continue with Checklist</a>
+</div>
+<p>{{order}}/{{total}}</p>
 {% endblock %}
+
+{% block after_body %}<script src="/static/js/checklist.js"></script>{% endblock %}
