Set up button disabling for when I get around to adding CSS.

--- a/templates/checklist.html
+++ b/templates/checklist.html
@@ -4,7 +4,7 @@
 {% block body %}
 <div class = "question">
     <h1>{{question}}</h1>
-    <a href="/checklist-item/{{order+1}}">Yes</a>
+    <a href="/checklist-item/{{order+1}}" class="yes-option">Yes</a>
     <a href="/show-advice" class="show-advice">No</a>
 </div>
 <div class = "advice">
