Made initial show route for account preferences page

--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
       <a href="/user-homepage">Home</a>
       <a href="#">Schedule</a>
       <a href="/checklist-item/1">Checklist</a>
-      <a href="#">Account Preferences</a>
+      <a href="/account-preferences">Account Preferences</a>
       <a href="/logout">Log Out</a>
       {% else %}
       <a href="/new-account">Create an Account</a>
