Added home button to the logged out navbar.

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,7 @@
       <a href="/account-preferences">Account Preferences</a>
       <a href="/logout">Log Out</a>
       {% else %}
+      <a href="/">Home</a>
       <a href="/new-account">Create an Account</a>
       <a href="/login">Log In</a> 
       {% endif %}
