--- a/templates/account_preferences.html
+++ b/templates/account_preferences.html
@@ -2,4 +2,27 @@
 {% block title %}Set Your Account Preferences{% endblock %}
 
 {% block body %}
+<h1>Account Preferences</h1>
+<form action="/update-account-preferences" class="account_preferences" method="POST">
+    <label for="email">Email: </label>
+    <input type="email" id="email" name="email" value="{{email}}"> <br>
+    <label for="name">Name: </label>
+    <input type="text" name="name" id="name" value="{{name}}"> <br>
+    <label for="zipcode">Zipcode: </label>
+    <input type="text" name="zipcode" id="zipcode" value="{{zipcode}}"> <br>
+    <label for="phone">Phone number: </label>
+    <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" value="{{phone}}" >
+    <p>Phone numbers should be in the format 555-555-5555</p>
+    <input type="submit">
+</form>
+<h2>Change Password</h2>
+<form action="/update-password" class="change_password" method="POST">
+    <label for="old_password">Current Password: </label>
+    <input type="password" name="old_password" id="old_password" required> <br>
+    <label for="new_password">New Password: </label>
+    <input type="password" name="new_password" id="new_password" required> <br>
+    <label for="confirm_password">Confirm New Password: </label>
+    <input type="password" name="confirm_password" id="confirm_password" required> <br>
+    <input type="submit">
+</form>
 {% endblock %}
