--- a/templates/create_account.html
+++ b/templates/create_account.html
@@ -4,14 +4,14 @@
 {% block body %}
 <h1>Create an Account!</h1>
 <form action="/create-account" method="POST" class="new-account">
-    <label for="name">What name would you like us to call you?</label>
+    <label for="name">Name: </label>
     <input type="text" name="name" id="name" required> <br>
-    <label for="zipcode">What zipcode do you want walking information for?</label>
+    <label for="zipcode">Zipcode: </label>
     <input type="text" name="zipcode" id="zipcode" required> <br>
-    <label for="email">Please enter an email address:</label>
+    <label for="email">Email: </label>
     <input type="email" name="email" id="email" required> <br>
-    <label for="password">Please select a password:</label>
-    <input type="password" name="password" id="password" required>
+    <label for="password">Password (8 characters minimum): </label>
+    <input type="password" name="password" id="password" minlength="8" required>
     <input type="submit">
 </form>
 
