Created links for future settings pages.

--- a/templates/checklist_start.html
+++ b/templates/checklist_start.html
@@ -3,5 +3,9 @@
 
 {% block body %}
 <h1>{{name}}'s Checklist For When Everything Feels Bad</h1>
+<h2>This is just a little checklist to help you figure out what's wrong on those days when 
+    nothing feels quite right. 
+</h2>
 <a href="/checklist-item/1">Start checklist</a>
+<a href="#">Edit Checklist</a>
 {% endblock %}
