--- a/templates/user_homepage.html
+++ b/templates/user_homepage.html
@@ -10,6 +10,7 @@
     <input type="submit">
 </form>
 <a href="/weather-preferences">Set Weather Preferences</a>
+<a href="#">Edit Alternate Activities</a>
 <div class="weather">
 </div>
 <div class="alternate">
