Added schedule page, linked to and added starting view.

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <nav>
       {% if "user_email" in session %}
       <a href="/user-homepage">Home</a>
-      <a href="#">Schedule</a>
+      <a href="/schedule">Schedule</a>
       <a href="/checklist-start">Checklist</a>
       <a href="/account-preferences">Account Preferences</a>
       <a href="/logout">Log Out</a>
