Added schedule page, linked to and added starting view.

--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -2,4 +2,5 @@
 {% block title %}{{name}}'s Schedule{% endblock %}
 {% block body %} 
     <h1>{{name}}'s Schedule</h1>
+    <a href="/add-event">Add an event</a>
 {% endblock %}
