display events on schedule page sorted by time

--- a/templates/schedule.html
+++ b/templates/schedule.html
@@ -3,4 +3,7 @@
 {% block body %} 
     <h1>{{name}}'s Schedule</h1>
     <a href="/new-event">Add an event</a>
+    {% for event in events %}
+        <p>{{event["time"]}}    {{event["description"]}}</p>
+    {% endfor %}
 {% endblock %}
