--- a/templates/add_event.html
+++ b/templates/add_event.html
@@ -8,7 +8,7 @@
             <option value="walk">Walk/Alternate Activity</option>
             <option value="custom">Custom</option>
         </select><br>
-        <label for="time">Reminder Time:</label>
+        <label for="time">Reminder Time (PDT):</label>
         <input type="time" id="time" name="time" required> <br>
         <label for="description">Description: </label>
         <input type="text" id="description" name="description" required><br>
