--- a/templates/add_event.html
+++ b/templates/add_event.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
-{% block title %}Add/Edit Event{% endblock %}
+{% block title %}Add Event{% endblock %}
 {% block body %} 
-    <h1>Add/Edit Event</h1>
+    <h1>Add Event</h1>
     <form action="/add-event" method="POST">
         <label for="event_type">Event type:</label>
         <select name="event_type" id="event_type">
