Start checklist editting page

--- a/templates/checklist_end.html
+++ b/templates/checklist_end.html
@@ -24,6 +24,7 @@
                     if you need them.</p>
         <h3>And if you figure out what's wrong about right now, 
             remember that you can always add another question to the checklist for next time.</h3>
+            <a href="/edit-checklist">Edit Checklist</a>
 
 <p>{{total}}/{{total}}</p>
 {% endblock %}
