--- a/templates/checklist_start.html
+++ b/templates/checklist_start.html
@@ -7,5 +7,5 @@
     nothing feels quite right. 
 </h2>
 <a href="/checklist-item/1">Start checklist</a>
-<a href="#">Edit Checklist</a>
+<a href="/edit-checklist">Edit Checklist</a>
 {% endblock %}
