--- a/templates/add_checklist_item.html
+++ b/templates/add_checklist_item.html
@@ -7,6 +7,12 @@
         <input type="text" id="question" name="question" required> <br>
         <label for="advice">Advice (if answer to Question is no):  </label>
         <input type="text" id="advice" name="advice" required><br>
+        <label for="order">Position in the checklist:</label>
+        <select name="order" id="order">
+            {% for order in range(1, count+1) %}
+            <option value="{{order}}">{{order}}</option>
+            {% endfor %}
+        </select>
         <input type="submit">
     </form>
 {% endblock %}
