Added basic CSS and a background image

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,11 +6,12 @@
     <title>
       {% block title %}{% endblock %}
     </title>
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="/static/css/style.css">
     {% block head %}{% endblock %}
   </head>
   <body>
-    <nav>
+    <nav class="navbar">
       {% if "user_email" in session %}
       <a href="/user-homepage">Home</a>
       <a href="/schedule">Schedule</a>
@@ -28,8 +29,9 @@
       {{ msg }}
     </p>
     {% endfor %}
-
+    <div class="container">
     {% block body %}{% endblock %}
+    </div>
 
     {% block after_body %}{% endblock %}
   </body>
