Fixed accessibility bug in weather_preferences and added and html lang attribute.

--- a/templates/weather_preferences.html
+++ b/templates/weather_preferences.html
@@ -118,24 +118,24 @@
     <fieldset>
         <legend>Rain:</legend>
         <div>
-          <input type="radio" id="ok" name="rain" value="true" checked>
-          <label for="ok">Ok</label>
+          <input type="radio" id="rain-ok" name="rain" value="true" checked>
+          <label for="rain-ok">Ok</label>
         </div>
         <div>
-          <input type="radio" id="no" name="rain" value="false">
-          <label for="no">No Way</label>
+          <input type="radio" id="rain-no" name="rain" value="false">
+          <label for="rain-no">No Way</label>
         </div>
     </fieldset>
     {% else %}
     <fieldset>
         <legend>Rain:</legend>
         <div>
-          <input type="radio" id="ok" name="rain" value="true">
-          <label for="ok">Ok</label>
+          <input type="radio" id="rain-ok" name="rain" value="true">
+          <label for="rain-ok">Ok</label>
         </div>
         <div>
-          <input type="radio" id="no" name="rain" value="false" checked>
-          <label for="no">No Way</label>
+          <input type="radio" id="rain-no" name="rain" value="false" checked>
+          <label for="rain-no">No Way</label>
         </div>
     </fieldset>
     {% endif %}
@@ -143,24 +143,24 @@
     <fieldset>
         <legend>Snow:</legend>
         <div>
-          <input type="radio" id="ok" name="snow" value="true" checked>
-          <label for="ok">Ok</label>
+          <input type="radio" id="snow-ok" name="snow" value="true" checked>
+          <label for="snow-ok">Ok</label>
         </div>
         <div>
-          <input type="radio" id="no" name="snow" value="false">
-          <label for="no">No Way</label>
+          <input type="radio" id="snow-no" name="snow" value="false">
+          <label for="snow-no">No Way</label>
         </div>
     </fieldset>
     {% else %}
     <fieldset>
         <legend>Snow:</legend>
         <div>
-          <input type="radio" id="ok" name="snow" value="true">
-          <label for="ok">Ok</label>
+          <input type="radio" id="snow-ok" name="snow" value="true">
+          <label for="snow-ok">Ok</label>
         </div>
         <div>
-          <input type="radio" id="no" name="snow" value="false" checked>
-          <label for="no">No Way</label>
+          <input type="radio" id="snow-no" name="snow" value="false" checked>
+          <label for="snow-no">No Way</label>
         </div>
     </fieldset>
     {% endif %}
