--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,9 @@
     <title>
       {% block title %}{% endblock %}
     </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="/static/css/style.css">
     {% block head %}{% endblock %}
@@ -30,7 +33,7 @@
     </p>
     {% endfor %}
     <div class="container">
-    {% block body %}{% endblock %}
+      {% block body %}{% endblock %}
     </div>
 
     {% block after_body %}{% endblock %}
