--- a/templates/weather_preferences.html
+++ b/templates/weather_preferences.html
@@ -30,14 +30,14 @@
     </fieldset>
     {% endif %}
     {% if temp_unit == true %}
-        <label for="max_temp">Maximum walking temperature: </label>
+        <label for="max_temp">Maximum walking temperature (Feels like): </label>
         <input type="number" id="max_temp" name="max_temp" value="{{max_temp}}" max="90" min="0"> <br>
-        <label for="min_temp">Minimum walking temperature: </label>
+        <label for="min_temp">Minimum walking temperature (Feels like): </label>
         <input type="number" id="min_temp" name="min_temp" value="{{min_temp}}" max="90" min="0"> <br>
     {% else %}
-        <label for="max_temp">Maximum walking temperature: </label>
+        <label for="max_temp">Maximum walking temperature (Feels like): </label>
         <input type="number" id="max_temp" name="max_temp" value="{{max_temp}}" max="32" min="-17"> <br>
-        <label for="min_temp">Minimum walking temperature: </label>
+        <label for="min_temp">Minimum walking temperature (Feels like): </label>
         <input type="number" id="min_temp" name="min_temp" value="{{min_temp}}" max="32" min="-17"> <br>
     {% endif %}
     <label for="max_hum">Maximum humidity (percentage):</label>
