--- a/templates/edit_checklist_item.html
+++ b/templates/edit_checklist_item.html
@@ -4,9 +4,9 @@
     <h1>Edit Checklist Item</h1>
     <form action="/edit-checklist-item/{{id}}" method="POST">
         <label for="question">Question:</label>
-        <input type="text" id="question" name="question" value="{{question}}" required> <br>
+        <input type="text" id="question" name="question" value="{{question}}" size="70" required> <br>
         <label for="advice" >Advice (if answer to Question is no):  </label>
-        <input type="text" id="advice" name="advice" value="{{advice}}" required><br>
+        <input type="text" id="advice" name="advice" value="{{advice}}" size="70" required><br>
         <select name="order" id="order">
             {% for order in range(1, count+1) %}
             {% if position == order %}
