Adjusted flash messages

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -54,6 +54,8 @@ a:hover {
 p.flash-msg {
     color: whitesmoke;
     background-color: #0F3A4B;
+    margin-bottom: 0;
+    padding-left: 10%;
 }
 
 input[type='number']{
