--- a/templates/add_checklist_item.html
+++ b/templates/add_checklist_item.html
@@ -3,16 +3,16 @@
 {% block body %} 
     <h1>Add Checklist Item</h1>
     <form action="/add-checklist-item" method="POST">
-        <label for="question">Question:</label>
+        <label for="question">Question:</label> <br>
         <input type="text" id="question" name="question" size="70" required> <br>
-        <label for="advice">Advice (if answer to Question is no):  </label>
+        <label for="advice">Advice (if answer to Question is no):  </label> <br>
         <input type="text" id="advice" name="advice" size="70" required><br>
         <label for="order">Position in the checklist:</label>
         <select name="order" id="order">
             {% for order in range(1, count+1) %}
             <option value="{{order}}">{{order}}</option>
             {% endfor %}
-        </select>
+        </select> <br>
         <input type="submit">
     </form>
 {% endblock %}
