--- a/templates/edit_checklist_item.html
+++ b/templates/edit_checklist_item.html
@@ -3,9 +3,9 @@
 {% block body %} 
     <h1>Edit Checklist Item</h1>
     <form action="/edit-checklist-item/{{id}}" method="POST">
-        <label for="question">Question:</label>
+        <label for="question">Question:</label> <br>
         <input type="text" id="question" name="question" value="{{question}}" size="70" required> <br>
-        <label for="advice" >Advice (if answer to Question is no):  </label>
+        <label for="advice" >Advice (if answer to Question is no):  </label> <br>
         <input type="text" id="advice" name="advice" value="{{advice}}" size="70" required><br>
         <select name="order" id="order">
             {% for order in range(1, count+1) %}
@@ -15,7 +15,7 @@
             <option value="{{order}}">{{order}}</option>
             {% endif %}
             {% endfor %}
-        </select>
+        </select> <br>
         <input type="submit">
     </form>
 {% endblock %}
