Adjusted horizontal padding on container

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -44,7 +44,8 @@ select {
     height: 100vh;
     overflow: auto; 
     color: whitesmoke;
-    padding-left: 10%;  
+    padding-left: 10%;
+    padding-right:10%;  
     padding-top: 2%;  
 }
 
