Made event forms match other forms in terms of layout.

--- a/templates/add_event.html
+++ b/templates/add_event.html
@@ -3,17 +3,17 @@
 {% block body %} 
     <h1>Add Event</h1>
     <form action="/add-event" method="POST">
-        <label for="event_type">Event type:</label>
+        <label for="event_type">Event type:</label> <br>
         <select name="event_type" id="event_type">
             <option value="walk">Walk/Alternate Activity</option>
             <option value="custom">Custom</option>
         </select><br>
-        <label for="time">Reminder Time (PDT):</label>
+        <label for="time">Reminder Time (PDT):</label><br>
         <input type="time" id="time" name="time" required> <br>
-        <label for="description">Description: </label>
+        <label for="description">Description: </label><br>
         <input type="text" id="description" name="description" required><br>
-        <label for="reminder">Click the box to recieve a text reminder:<label>
-        <input type="checkbox" id="reminder" name="reminder">
+        <label for="reminder">Click the box to recieve a text reminder:</label>
+        <input type="checkbox" id="reminder" name="reminder"><br>
         <input type="submit">
     </form>
 {% endblock %}
