Added margin around anchors in body. Made weather one paragraph. Adjusted vertical rhythm again.

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -9,7 +9,9 @@
     <input type="text" name="zipcode" id="zipcode-field"></input>
     <input type="submit">
 </form>
-<a href="/new-account">Want to customize your walking weather and more? Make an account!</a>
+<div class="anchors">
+    <a href="/new-account">Want to customize your walking weather and more? Make an account!</a>
+</div>
 <div class="weather">
 </div>
 <div class="alternate">
