--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,7 +6,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Raleway', sans-serif;
-    margin: 1rem auto;
+    margin: 1.5rem auto;
 }
 
 p {
@@ -23,11 +23,11 @@ ul {
 }
 
 li {
-    margin: 1% auto;
+    margin: .5rem auto;
 }
 
 input {
-    margin: 1% auto;
+    margin: .75rem auto;
 }
 
 select {
@@ -49,15 +49,19 @@ select {
     padding-top: 2%;  
 }
 
+.anchors {
+    margin: 1rem auto;
+}
+
 a:hover {
     color: #E7BE9C;
 }
 
 p.flash-msg {
-    color: whitesmoke;
-    background-color: #0F3A4B;
+    color: #02141B;
+    background-color: #33a8d7;
     margin: 0;
-    padding-left: 10%;
+    text-align: center;
 }
 
 input[type='number']{
