--- a/templates/user_homepage.html
+++ b/templates/user_homepage.html
@@ -9,8 +9,10 @@
     <input type="text" name="zipcode" id="zipcode-field" value="{{zipcode}}"></input>
     <input type="submit">
 </form>
-<a href="/weather-preferences">Set Weather Preferences</a>
-<a href="/alternate-activities">Edit Alternate Activities</a>
+<div class="anchors">
+    <a href="/weather-preferences">Set Weather Preferences</a>
+    <a href="/alternate-activities">Edit Alternate Activities</a>
+</div>
 <div class="weather">
 </div>
 <div class="alternate">
